tests/baselines/reference/invalidTryStatements2.errors.txt
==== tests/cases/compiler/invalidTryStatements2.ts (5 errors) ====
    function fn() {
        try {
        } catch { // syntax error, missing '(x)'
                ~
!!! error TS1005: '(' expected.
        }
    
        catch(x) { } // error missing try
        ~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
                 ~
!!! error TS1005: ';' expected.
              ~
!!! error TS2095: Could not find symbol 'x'.
    
        finally{ } // error missing try
        ~~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
    }